# chipper

./: .gitignore  Cargo.toml  README.md
scripts/docker/: Dockerfile.centos79
src/: args.rs  cli.rs  lib.rs  widgets.rs
src/gui/: app.rs  mod.rs  state.rs
src/resources/: chipper.glade
src/widgets/: app.rs  event.rs  mod.rs  state.rs
